; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-nix.c_os_cpu_usage_info_start.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-nix.c_os_cpu_usage_info_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_cpu_usage_info = type { i32, i32, i32, i32 }
%struct.tms = type { i32, i32 }

@_SC_NPROCESSORS_ONLN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.os_cpu_usage_info* @os_cpu_usage_info_start() #0 {
  %1 = alloca %struct.os_cpu_usage_info*, align 8
  %2 = alloca %struct.tms, align 4
  %3 = call %struct.os_cpu_usage_info* @bmalloc(i32 16)
  store %struct.os_cpu_usage_info* %3, %struct.os_cpu_usage_info** %1, align 8
  %4 = call i32 @times(%struct.tms* %2)
  %5 = load %struct.os_cpu_usage_info*, %struct.os_cpu_usage_info** %1, align 8
  %6 = getelementptr inbounds %struct.os_cpu_usage_info, %struct.os_cpu_usage_info* %5, i32 0, i32 3
  store i32 %4, i32* %6, align 4
  %7 = getelementptr inbounds %struct.tms, %struct.tms* %2, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.os_cpu_usage_info*, %struct.os_cpu_usage_info** %1, align 8
  %10 = getelementptr inbounds %struct.os_cpu_usage_info, %struct.os_cpu_usage_info* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 4
  %11 = getelementptr inbounds %struct.tms, %struct.tms* %2, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.os_cpu_usage_info*, %struct.os_cpu_usage_info** %1, align 8
  %14 = getelementptr inbounds %struct.os_cpu_usage_info, %struct.os_cpu_usage_info* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @_SC_NPROCESSORS_ONLN, align 4
  %16 = call i32 @sysconf(i32 %15)
  %17 = load %struct.os_cpu_usage_info*, %struct.os_cpu_usage_info** %1, align 8
  %18 = getelementptr inbounds %struct.os_cpu_usage_info, %struct.os_cpu_usage_info* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.os_cpu_usage_info*, %struct.os_cpu_usage_info** %1, align 8
  ret %struct.os_cpu_usage_info* %19
}

declare dso_local %struct.os_cpu_usage_info* @bmalloc(i32) #1

declare dso_local i32 @times(%struct.tms*) #1

declare dso_local i32 @sysconf(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
